--- a/Source/Enter.Ui/Styles/components/_ent_nav_menu.component.scss
+++ b/Source/Enter.Ui/Styles/components/_ent_nav_menu.component.scss
@@ -66,7 +66,7 @@
       > .ent-nav-menu-item {
         //border-inline-start: var(--ent-border-8) solid var(--ent-bg-neutral-emphasis);
         background-color: var(--ent-bg-neutral);
-        padding-left: var(--ent-space-6);
+        padding-inline-start: var(--ent-space-6);
       }
 
       > .ent-nav-menu-item.active {
