--- a/Source/Enter.Ui/Styles/components/_ent_toolbar.component.scss
+++ b/Source/Enter.Ui/Styles/components/_ent_toolbar.component.scss
@@ -19,9 +19,6 @@
   box-shadow: var(--ent-toolbar-box-shadow);
   z-index: var(--ent-toolbar-z-index);
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: start;
-  gap: 4px;
+  flex-direction: column;
 }
 
