fix input z-index bugs on popover

--- a/Source/Enter.Ui/Components/Inputs/EntInputAutoComplete.razor
+++ b/Source/Enter.Ui/Components/Inputs/EntInputAutoComplete.razor
@@ -6,7 +6,10 @@
 @using Enter.Ui.Cores.Enums
 @typeparam T
 <div @attributes="@AdditionalAttributes" class="@ClassNames" style="@StyleNames" @ref="_elementReference" id="@Id">
-    <EntInputText  @ref="_inputReference" EventType="oninput" class="@("ent-input-autocomplete-input")"
+    @{
+        var inputClass = _showMenu ? "ent-input-autocomplete-input focus":"ent-input-autocomplete-input";
+    }
+    <EntInputText  @ref="_inputReference" EventType="oninput" class="@inputClass"
                   Value="@Value" ValueChanged="@ValueChanged" Disabled="@Disabled" Readonly="@Readonly" @onclick="@Click" @onfocusin="@Click"
                   ValueExpression="@ValueExpression" @oninput="@OnInputCallback" Icon="@EntIconName.Search"/>
     <EntPopover Open="_showMenu" RelativeWidth="true" Anchor="Origin.BottomCenter" Transform="Origin.TopCenter" PopoverClass="@("ent-input-autocomplete-popover")">
