--- a/Source/Enter.Ui/Styles/base/_utility.scss
+++ b/Source/Enter.Ui/Styles/base/_utility.scss
@@ -116,14 +116,16 @@
   display: flex !important;
   flex-direction: column;
   flex: 1;
-  overflow-y: auto;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .horizontal-scroll {
   display: flex !important;
   flex-direction: row;
   flex: 1;
-  overflow-x: auto;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .cursor-pointer {
