--- a/Source/Enter.Ui/Styles/components/_ent_tab.component.scss
+++ b/Source/Enter.Ui/Styles/components/_ent_tab.component.scss
@@ -133,7 +133,7 @@
 
   > .responsive\:ent-tab-item-container {
     background-color: var(--ent-tab-bg);
-    z-index: calc(var(--ent-z-index-3));
+    z-index: calc(var(--ent-z-index-3) + 1);
 
   
     
@@ -273,5 +273,5 @@
 }
 
 .ent-tab-overlay {
-  z-index: calc(var(--ent-z-index-3) - 1);
+  z-index: var(--ent-z-index-3) !important;
 }
