--- a/Source/Enter.Ui/Components/Drawer/EntDrawer.razor
+++ b/Source/Enter.Ui/Components/Drawer/EntDrawer.razor
@@ -23,7 +23,7 @@
 
     protected override void BuildStyles(StyleBuilder builder)
     {
-        builder.AddStyle($"width: {Width}px");
+        builder.AddStyle($"--ent-drawer-width: {Width}px");
         base.BuildStyles(builder);
        
     }
@@ -50,7 +50,7 @@
                 case EntDrawerWidthType.Custom:
                     break;
                 case EntDrawerWidthType.Full:
-                    Width = DrawerContainer?.BoundingClientRect.ScrollWidth??0;
+                    Width = DrawerContainer?.BoundingClientRect.ScrollWidth ?? 0;
                     break;
                 case EntDrawerWidthType.Half:
                     Width = DrawerContainer?.BoundingClientRect.ScrollWidth / 2 ??0;
@@ -80,6 +80,7 @@
     
     [Parameter]
     public double Width { get; set; } = 300;
+    
     [CascadingParameter]
     public EntDrawerContainer? DrawerContainer { get; set; }
 
