--- a/Source/Enter.Ui/Components/Drawer/EntDrawer.razor
+++ b/Source/Enter.Ui/Components/Drawer/EntDrawer.razor
@@ -11,7 +11,9 @@
     public override string ComponentName => nameof(EntDrawer);
     protected override void BuildClasses(ClassBuilder builder)
     {
-        builder.AddClass("ent-drawer")
+        builder
+            .AddClass("ent-drawer")
+            .AddClass("ent-drawer-transparent",Transparent)
             .AddClass("ent-drawer--direction-start", Direction == EntDrawerDirection.Start)
             .AddClass("ent-drawer--direction-end", Direction == EntDrawerDirection.End)
             .AddClass("ent-drawer--mode-behavior", Mode == EntDrawerMode.Behavior)
@@ -90,6 +92,9 @@
 
     [Parameter]
     public bool Open { get; set; }
+    
+    [Parameter]
+    public bool Transparent { get; set; }
 
     [Parameter]
     public bool HasBackdrop { get; set; }
