--- a/Source/Enter.Ui/Styles/components/_ent_drawer.component.scss
+++ b/Source/Enter.Ui/Styles/components/_ent_drawer.component.scss
@@ -12,7 +12,9 @@
 .ent-drawer-container {
   overflow: hidden;
   position: relative;
-
+  > .ent-drawer-transparent {
+    background-color: transparent;
+  }
   > .ent-drawer {
     position: absolute;
     bottom: 0;
