--- a/Source/Enter.Ui/Components/Expanable/EntExpandable.razor
+++ b/Source/Enter.Ui/Components/Expanable/EntExpandable.razor
@@ -23,7 +23,6 @@
     private bool _expanded, _updateHeight;
     private double _size = 0;
     private string _cssProperty = "height";
-    private bool _componentIsReady = false;
 
 
 
@@ -77,7 +76,7 @@
                 return;
             _expanded = value;
 
-            if (_componentIsReady)
+            if (RenderIsReady)
             {
                 AnimationState = _expanded ? EntAnimatorState.Starting : EntAnimatorState.Ending;
                 _ = UpdateSize();
@@ -129,19 +128,11 @@
     }
 
 
-    protected override async Task OnAfterRenderAsync(bool firstRender)
+    protected override async Task OnFirstAfterRenderAsync()
     {
-
-        if (firstRender)
-        {
-            await UpdateSize();
-
-            _componentIsReady = true;
-            StateHasChanged();
-        }
-        await base.OnAfterRenderAsync(firstRender);
+        await UpdateSize();
+        await base.OnFirstAfterRenderAsync();
     }
-
 
     internal async Task UpdateSize()
     {
