--- a/example/Enter.Dashboard/Shared/DocumentLayout.razor
+++ b/example/Enter.Dashboard/Shared/DocumentLayout.razor
@@ -17,8 +17,8 @@
             <EntButton @onclick="ToggleDarkMode" Icon="EntIconName.Moon"/>
             <EntButton @onclick="@(() => _isSideDrawerOpen = !_isSideDrawerOpen)" Icon="EntIconName.Note"/>
         </EntAppBar>
-        <EntDrawerContainer class="flex-grow-1">
-            <EntDrawer Width="300"  HasBackdrop="HasBackdrop" @bind-Open="_isDrawerOpen" Direction="EntDrawerDirection.Start" AutoResponsive>
+        <EntDrawerContainer DrawersWidthType="EntDrawerWidthType.Quarter" class="flex-grow-1">
+            <EntDrawer  HasBackdrop="HasBackdrop" @bind-Open="_isDrawerOpen" Direction="EntDrawerDirection.Start" AutoResponsive>
                 <EntNavMenu class="border-0">
                     <EntNavMenuTextItem Icon="@EntIconName.Dashboard"  Text="Buttons" Click="NewTab"/>
                     <EntNavMenuGroup Icon="@EntIconName.Dashboard" Title="Documents">
@@ -45,7 +45,7 @@
             </EntDrawer>
             <EntDrawer
                 Open="true"
-                WidthType="EntDrawerWidthType.Half"
+               
                 Direction="EntDrawerDirection.End"
                 Mode="EntDrawerMode.Behavior"
                 class="z-50">
